JavaZone 2024 updates